# Cellular_Automata_GPU

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakeLists_.txt  Readme.md
include/: common.hpp  cyclic_ca.hpp  forest_fire.hpp  game_of_life.cuh  game_of_life.hpp  kernels.cuh  kernels.hpp  stb_image_write.h  utils.h  wireworld.hpp
patterns/: 3-state-turingmachine.rle  6enginecodeship.rle  central-seed.rle  cyclic-ca-simpler-waves.rle  reaction.rle  ripple-pattern.rle
src/: cyclic_ca.cpp  game_of_life.cpp  game_of_life.cu  kernels.cu  main.cpp  test.cpp  test.cu  utils.cpp  wireworld.cpp
src/kernels/: gol.cu  wireworld.cu
src/kernels/forest_fire/: forest_fire_baseline.cu  forest_fire_lut.cu
tests/: test1.txt
